Implementing the PATCH /api/tasks/{id}
